Update homepage in `package.json`

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "engines": {
     "node": ">=4"
   },
-  "homepage": "https://github.com/sesemaya/discourse-material-theme",
+  "homepage": "https://labs.daemon.com.au/t/daemonite-material-discourse-theme/353",
   "keywords": [
     "discourse",
     "material",
