--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://labs.daemon.com.au/t/daemonite-material-discourse-theme/353",
   "keywords": [
     "discourse",
+    "discourse-theme",
     "material",
     "theme"
   ],
